# tend

./: .env.example  .gitignore  Containerfile  README.md  compose.yml  pyproject.toml
docs/: APPLICATION_EXPERIENCE_DESIGN.md  BOOK.md  CLAUDE.md  DESIGN_DOCUMENT.md  DESIGN_GUIDE.md  IMPLEMENTATION_ROADMAP.md
tend_project/: manage.py
tend_project/tend/: asgi.py  urls.py  wsgi.py
tend_project/tend/settings/: base.py  development.py  production.py
